Början till swagger. Början till endpoints. Början till auth.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui": "^5.22.0"
+    "swagger-ui-express": "^5.0.1"
   }
 }
