--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
     "yaml": "^2.8.0"
   }
 }
